# farewell_backend

./: .flaskenv  manage.py  pyproject.toml
config/: __init__.py  app.db  base.py  dev.py
migrations/versions/: 414cfb678aeb_.py
project/: __init__.py  blueprints_registry.py
project/api/users/: __init__.py  controller.py  data.json  interface.py  model.py  schema.py  service.py
project/lib/: errors.py  model_utils.py
